--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,33 @@
-# Built application files
+# Gradle files
+.gradle/
 build/
-release/
-*.apk
-*.so
-.externalNativeBuild
-.cxx
-*.zip
-
-# Crashlytics configuations
-com_crashlytics_export_strings.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
 
-# Gradle generated files
-.gradle/
+# Log/OS Files
+*.log
 
-# Signing files
-.signing/
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
 
-# User-specific configurations
-.idea/
+# IntelliJ
 *.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
 
-# OS-specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Keystore files
+*.jks
+*.keystore
 
-# Temp/backup files
-*~
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
